<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/nomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/oQueComprouTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whatBuy" />

    <TextView
        android:id="@+id/valorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boughtValue" />

    <Button
        android:id="@+id/excluirButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Excluir" />

</LinearLayout>
