<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".PaymentListActivity">

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Layout para cada item da lista -->
    <LinearLayout
        android:id="@+id/paymentListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/nomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            tools:ignore="VisualLintBounds" />

        <TextView
            android:id="@+id/oQueComprouTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whatBuy"
            tools:ignore="VisualLintBounds" />

        <TextView
            android:id="@+id/valorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boughtValue"
            tools:ignore="InvalidId,VisualLintBounds" />
    </LinearLayout>
</LinearLayout>
