<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdatePaymentActivity">

    <TextView
        android:id="@+id/textTituloCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Editar Pagamento"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/namePlaceholder"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTituloCadastro"
        android:autofillHints=""
        android:inputType="none"
        android:focusable="false"
        tools:ignore="NotSibling,TextFields,VisualLintTextFieldSize" />


    <EditText
        android:id="@+id/editValorPago"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/valuePlaceholder"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editNome"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editOQueComprou"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/boughtPlaceholder"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editValorPago"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registerTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editOQueComprou"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>
